--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,21 @@
-.logo{
+#Logo{
+    size: 100%;
     border-radius: 50%;
+}
+footer{
+    width: 100%;
+    background-color: rgb(100, 96, 96);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    position: fixed;
+    bottom: 0;
+    color: beige;
+}
+
+.footerText{
+    display: inline-block;
+}
+.date{
+    float: right;
+    margin-right: 50px;
 }
