--- a/Style.css
+++ b/Style.css
@@ -1,14 +1,15 @@
+/* Body */
+body{
+    background-color: #ffffff;
+}
+
 /* Header styles */
 #Logo{
     height: 23vh;
     width: 15vw;
     background-color: red;
 }
-#Doneren{
-    height: 23vh;
-    width: 15vw;
-    border-radius: 100%;
-}
+
 .btn {
     border: none;
     background-color: #ffffff;
@@ -37,7 +38,67 @@
   .StandPunten {color: rgb(255, 0, 0)}
   .Contact {color: rgb(255, 0, 0);}
 
-
+a {
+    border-radius: 100%;
+    height: 15vh;
+    width: 15vw;
+    padding: 20px 30px;
+    position: relative;
+    display: block;
+    text-decoration: none;
+    overflow: hidden;
+    background-color: #000000;
+  }
+  a:hover .wave {
+    top: -120px;
+  }
+  a span {
+    position:relative;
+    z-index: 1;
+    color: white;
+    font-size: 23px;
+    letter-spacing: 7px;
+  }
+  a .wave {
+    width: 25vw;
+    height: 200px;
+    background-color: #000000;
+    box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    top: -80px;
+    transition: 0.4s;
+  }
+  a .wave::before, a .wave::after {
+    width: 39vw;
+    height: 36vh;
+    content: "";
+    position: absolute;
+    
+    left: 15%;
+    transform: translate(-50%, -75%);
+  }
+  a .wave::before {
+    border-radius: 45%;
+    background-color: #ffffffab;
+    animation: wave 8s linear infinite;
+    top: -15%;
+  }
+  a .wave::after {
+    border-radius: 40%;
+    background-color: rgb(255, 0, 0);
+    animation: wave 8s linear infinite;
+    top: 375px;
+  }
+  
+  @keyframes wave {
+    0% {
+      transform: translate(-50%, -75%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -75%) rotate(360deg);
+    }
+  }
 
 
 
@@ -69,3 +130,7 @@ footer{
     margin-right: 5px;
     font-size: 1.5vw;
 }
+
+
+
+
