--- a/Style.css
+++ b/Style.css
@@ -1,136 +1,167 @@
 /* Body */
-body{
-    background-color: #ffffff;
+body {
+  display: grid;
+  background-color: #ffffff;
+  grid-template-areas: 
+  'Logo Menu wave '
+  'Onderwerp Onderwerp Onderwerp '
+  'Footer Footer Footer '
+  ;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: 2fr 5fr 1fr;
 }
 
 /* Header styles */
-#Logo{
-    height: 23vh;
-    width: 15vw;
-    background-color: red;
+#Logo {
+  grid-area: Logo;
+  height: 23vh;
+  width: 15vw;
+  background-color: red;
+}
+.Menu{
+  grid-area: Menu;
+}
+.btn {
+  border: none;
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 25%;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  transition: 0.5s;
 }
 
-.btn {
-    border: none;
-    background-color: #ffffff;
-    color: #000000;
-    border-radius: 25%;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-    display: inline-block;
-    transition: 0.5s;
-  }
-  .btn:hover{
-    background: #ff0000;
-    color: #000000;
-    box-shadow: 0 0 5px #f40303,
-                0 0 25px #f40303,
-                0 0 50px rgb(255, 0, 0),
-                0 0 200px #ff0000;
-     -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
+.btn:hover {
+  background: #ff0000;
+  color: #000000;
+  box-shadow: 0 0 5px #f40303,
+    0 0 25px #f40303,
+    0 0 50px rgb(255, 0, 0),
+    0 0 200px #ff0000;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 }
-  
-  .btn:hover {background: #ff0000;}
-  
-  .News {color: rgb(255, 0, 0)}
-  .Leden {color: rgb(255, 0, 0)}
-  .StandPunten {color: rgb(255, 0, 0)}
-  .Contact {color: rgb(255, 0, 0);}
+
+.btn:hover {
+  background: #ff0000;
+}
+
+.News {
+  color: rgb(255, 0, 0)
+}
+
+.Leden {
+  color: rgb(255, 0, 0)
+}
+
+.StandPunten {
+  color: rgb(255, 0, 0)
+}
+
+.Contact {
+  color: rgb(255, 0, 0);
+}
 
 a {
-    border-radius: 100%;
-    height: 15vh;
-    width: 15vw;
-    padding: 20px 30px;
-    position: relative;
-    display: block;
-    text-decoration: none;
-    overflow: hidden;
-    background-color: #000000;
-  }
-  a:hover .wave {
-    top: -120px;
-  }
-  a span {
-    position:relative;
-    z-index: 1;
-    color: white;
-    font-size: 23px;
-    letter-spacing: 7px;
-  }
-  a .wave {
-    width: 25vw;
-    height: 200px;
-    background-color: #000000;
-    box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
-    position: absolute;
-    left: 0;
-    top: -80px;
-    transition: 0.4s;
-  }
-  a .wave::before, a .wave::after {
-    width: 39vw;
-    height: 36vh;
-    content: "";
-    position: absolute;
-    
-    left: 15%;
-    transform: translate(-50%, -75%);
-  }
-  a .wave::before {
-    border-radius: 45%;
-    background-color: #ffffffab;
-    animation: wave 8s linear infinite;
-    top: -15%;
-  }
-  a .wave::after {
-    border-radius: 40%;
-    background-color: rgb(255, 0, 0);
-    animation: wave 8s linear infinite;
-    top: 375px;
-  }
-  
-  @keyframes wave {
-    0% {
-      transform: translate(-50%, -75%) rotate(0deg);
-    }
-    100% {
-      transform: translate(-50%, -75%) rotate(360deg);
-    }
-  }
-
-
-
-
-
-
-  
-  
-
-footer{
-    width: 100vw;
-    height: 8vh;
-    background-color: rgb(245, 13, 13);
-    border-radius: 22px;
-    position: fixed;
-    bottom: 5px;
-    color: beige;
-    margin: 0px 0px 0px -8px;
-    text-align: center;
+  border-radius: 100%;
+  height: 15vh;
+  width: 15vw;
+  padding: 20px 30px;
+  position: relative;
+  display: block;
+  text-decoration: none;
+  overflow: hidden;
+  background-color: #000000;
 }
 
-.footerText{
-    display: inline-block;
-    font-size: 1.5vw;
-   
+a:hover .wave {
+  top: -120px;
 }
-.date{
-    float: right;
-    margin-right: 5px;
-    font-size: 1.5vw;
+
+a span {
+  position: relative;
+  z-index: 1;
+  color: white;
+  font-size: 23px;
+  letter-spacing: 7px;
+}
+
+a .wave {
+  width: 25vw;
+  height: 200px;
+  background-color: #000000;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  top: -80px;
+  transition: 0.4s;
+}
+
+a .wave::before,
+a .wave::after {
+  width: 39vw;
+  height: 36vh;
+  content: "";
+  position: absolute;
+
+  left: 15%;
+  transform: translate(-50%, -75%);
+}
+
+a .wave::before {
+  border-radius: 45%;
+  background-color: #ffffffab;
+  animation: wave 8s linear infinite;
+  top: -15%;
+}
+
+a .wave::after {
+  border-radius: 40%;
+  background-color: rgb(255, 0, 0);
+  animation: wave 8s linear infinite;
+  top: 375px;
+}
+
+@keyframes wave {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
 }
 
 
 
 
+
+
+
+
+
+footer {
+  grid-area: Footer;
+  width: 100vw;
+  height: 8vh;
+  background-color: rgb(245, 13, 13);
+  border-radius: 22px;
+  position: fixed;
+  bottom: 5px;
+  color: beige;
+  margin: 0px 0px 0px -8px;
+  text-align: center;
+}
+
+.footerText {
+  display: inline-block;
+  font-size: 1.5vw;
+
+}
+
+.date {
+  float: right;
+  margin-right: 5px;
+  font-size: 1.5vw;
+}
