--- a/Style.css
+++ b/Style.css
@@ -1,35 +1,49 @@
+*{
+  font-family:fantasy;
+}
 /* Body */
 body {
+  background-color: #d8d8d8;
   display: grid;
-  background-color: #ffffff;
   grid-template-areas: 
-  'Logo Menu wave '
-  'Onderwerp Onderwerp Onderwerp '
-  'Footer Footer Footer '
+  'Header'
+  'Onderwerp'
+  'Footer'
   ;
-  grid-template-columns: 1fr 4fr 1fr;
-  grid-template-rows: 2fr 5fr 1fr;
+  /* grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: 2fr 5fr 1fr; */
 }
 
 /* Header styles */
+Header{
+  display: grid;
+  grid-area: Header;
+  grid-template-areas: 'Logo Menu wave';
+}
 #Logo {
   grid-area: Logo;
-  height: 23vh;
-  width: 15vw;
-  background-color: red;
+  border-radius: 0%;
+  height: 16vh;
+  width: 14vw;
+  background-color: #d8d8d8;
+  background-image: url("Images/SP.png");
+  background-size: cover;
 }
 .Menu{
+  display: flex;
   grid-area: Menu;
+  align-items: center;
+  
 }
 .btn {
   border: none;
-  background-color: #ffffff;
+  background-color: #d8d8d8;
   color: #000000;
   border-radius: 25%;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
-  display: inline-block;
+ 
   transition: 0.5s;
 }
 
@@ -63,34 +77,44 @@ body {
   color: rgb(255, 0, 0);
 }
 
-a {
+
+
+/* Doneer */
+.Doneer {
+  grid-area: wave;
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  align-items: center;
+  text-align: center;
   border-radius: 100%;
-  height: 15vh;
-  width: 15vw;
+  height: 7vh;
+  width: 8vw;
   padding: 20px 30px;
   position: relative;
-  display: block;
   text-decoration: none;
   overflow: hidden;
-  background-color: #000000;
+  background-color: #d8d8d8;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
 }
 
-a:hover .wave {
+.Doneer:hover .wave {
   top: -120px;
 }
 
-a span {
+.Doneer span {
   position: relative;
   z-index: 1;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 23px;
   letter-spacing: 7px;
 }
 
-a .wave {
+.Doneer .wave {
+ 
   width: 25vw;
   height: 200px;
-  background-color: #000000;
+  background-color: #d8d8d8;
   box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
   position: absolute;
   left: 0;
@@ -98,8 +122,8 @@ a .wave {
   transition: 0.4s;
 }
 
-a .wave::before,
-a .wave::after {
+.Doneer .wave::before,
+.Doneer .wave::after {
   width: 39vw;
   height: 36vh;
   content: "";
@@ -109,14 +133,14 @@ a .wave::after {
   transform: translate(-50%, -75%);
 }
 
-a .wave::before {
+.Doneer .wave::before {
   border-radius: 45%;
   background-color: #ffffffab;
   animation: wave 8s linear infinite;
   top: -15%;
 }
 
-a .wave::after {
+.Doneer .wave::after {
   border-radius: 40%;
   background-color: rgb(255, 0, 0);
   animation: wave 8s linear infinite;
@@ -133,23 +157,26 @@ a .wave::after {
   }
 }
 
+.Onderwerp{
+  grid-area: Onderwerp;
+  height: 40vh;
+}
 
 
 
 
 
 
-
-
+/* Footer */
 footer {
   grid-area: Footer;
   width: 100vw;
   height: 8vh;
   background-color: rgb(245, 13, 13);
   border-radius: 22px;
-  position: fixed;
-  bottom: 5px;
-  color: beige;
+  
+  
+  color: rgb(0, 0, 0);
   margin: 0px 0px 0px -8px;
   text-align: center;
 }
