--- a/Style.css
+++ b/Style.css
@@ -3,9 +3,12 @@
 }
 /* Body */
 body {
-  background-color: #d8d8d8;
+  margin: 0px 0px 0px 0px;
+  border-top: 4px solid #EC1B23;
+  background-color: #e8e8e8;
   display: grid;
   grid-template-areas: 
+  'PTitle'
   'Header'
   'Onderwerp'
   'Footer'
@@ -13,9 +16,16 @@ body {
   /* grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 2fr 5fr 1fr; */
 }
-
+h1{
+  
+  height: 0vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Header styles */
 Header{
+  margin: -30px 15px 0px 15px;
   display: grid;
   grid-area: Header;
   grid-template-areas: 'Logo Menu wave';
@@ -25,7 +35,7 @@ Header{
   border-radius: 0%;
   height: 16vh;
   width: 14vw;
-  background-color: #d8d8d8;
+  background-color: #e8e8e8;
   background-image: url("Images/SP.png");
   background-size: cover;
 }
@@ -36,11 +46,11 @@ a {
   display: flex;
   grid-area: Menu;
   align-items: center;
-  
+  justify-content: center;
 }
 .btn {
   border: none;
-  background-color: #d8d8d8;
+  background-color: #e8e8e8;
   color: #000000;
   border-radius: 25%;
   padding: 14px 28px;
@@ -84,13 +94,12 @@ a {
   grid-area: wave;
   display: flex;
   align-self: center;
-  justify-self: center;
-  align-items: center;
+  justify-self: right;
   text-align: center;
   border-radius: 100%;
-  height: 7vh;
+  height: 8vh;
   width: 8vw;
-  padding: 20px 30px;
+  padding: 26px 27px;
   position: relative;
   text-decoration: none;
   overflow: hidden;
