--- a/Style.css
+++ b/Style.css
@@ -13,6 +13,8 @@ body {
   'Onderwerp'
   'Footer'
   ;
+  animation: span1 2s linear infinite;
+  animation-delay: 1s;
   /* grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 2fr 5fr 1fr; */
 }
@@ -182,6 +184,14 @@ a {
     filter: blur(0);
     color: #000000;
     text-shadow: none;
+  }
+}
+@keyframes span1{
+  0%{
+      left:-200px
+  }
+  100%{
+      left:200px;
   }
 }
 
