--- a/Style.css
+++ b/Style.css
@@ -72,19 +72,19 @@ a {
   background: #ff0000;
 }
 
-.Nieuws {
+.NieuwsM {
   color: rgb(255, 0, 0)
 }
 
-.Leden {
+.LedenM {
   color: rgb(255, 0, 0)
 }
 
-.StandPunten {
+.StandPuntenM {
   color: rgb(255, 0, 0)
 }
 
-.Contact {
+.ContactM {
   color: rgb(255, 0, 0);
 }
 
