--- a/Style.css
+++ b/Style.css
@@ -200,7 +200,7 @@ a {
 /* Footer */
 footer {
   grid-area: Footer;
-  width: 100vw;
+  width: auto;
   height: 8vh;
   background-color: rgb(245, 13, 13);
   border-radius: 22px;
