--- a/Style2.css
+++ b/Style2.css
@@ -10,6 +10,7 @@
   --border-width: 4px;
   height: 65vh;
   border-radius: var(--border-width);
+  
   position: relative;
   -webkit-box-shadow: 0px 0px 6px 7px rgba(0, 0, 0, 0.45);
   -moz-box-shadow: 0px 0px 6px 7px rgba(0, 0, 0, 0.45);
@@ -19,23 +20,23 @@
 
 .N1 {
   grid-area: Nieuws1;
-  background-color: aqua;
+  
 
 }
 
 .N2 {
   grid-area: Nieuws2;
-  background-color: rgb(255, 234, 0);
+  
 }
 
 .N3 {
   grid-area: Nieuws3;
-  background-color: rgb(0, 232, 0);
+  
 }
 
 .N4 {
   grid-area: Nieuws4;
-  background-color: rgb(127, 127, 127);
+  
 }
 
 .Nieuws::after {
@@ -167,6 +168,7 @@
 
 /* StandPunten */
 #StandPuntenPage{
+  grid-area: Onderwerp;
   display: grid;
   grid-template-areas: 
   'Leed1 Leed2'
