--- a/Style2.css
+++ b/Style2.css
@@ -251,12 +251,18 @@
 
 .L {
   grid-area: DL;
-
+  background: linear-gradient(to bottom, #ffffff, #be0000);
+  box-shadow: -10px 0px 13px -7px #ff0000, 10px 0px 13px -7px #ff0000, -4px 3px 7px 4px rgba(0, 0, 0, 0.44);
+  border-radius: 51% 49% 49% 51% / 64% 62% 38% 36%;
 }
 
 .R {
   grid-area: DR;
-
+  background: linear-gradient(to top,
+      #ffffff,
+      #cf0000);
+  border-radius: 50% 50% 50% 50% / 25% 25% 75% 75% ;
+  box-shadow: -10px 0px 13px -7px #ff0000, 10px 0px 13px -7px #ff0000, -4px 3px 7px 4px rgba(0, 0, 0, 0.44);
 
 }
 
@@ -265,12 +271,9 @@
   margin: 0px 50px;
   width: 40vw;
   height: 72vh;
-  box-shadow: -10px 0px 13px -7px #ff0000, 10px 0px 13px -7px #ff0000, -4px 3px 7px 4px rgba(0, 0, 0, 0.44);
-  border-radius: 51% 49% 49% 51% / 64% 62% 38% 36%;
+
   align-items: center;
-  background: linear-gradient(to right,
-      #f27c7c,
-      #b31c1c);
+
 }
 
 
@@ -291,7 +294,8 @@ input[type="submit"] {
   color: #fff;
   cursor: pointer;
 }
-.L label{
+
+.L label {
   display: flex;
   justify-content: center;
   font-weight: normal;
