--- a/Style2.css
+++ b/Style2.css
@@ -136,14 +136,25 @@
 }
 
 .Ledenp {
-  display: flex;
+  /* display: flex; */
 
   margin: 15px 0px;
   text-align: center;
   background-size: cover;
   border-radius: 30px;
+  width: 25%;
+  position: relative;
 }
 
+.Ledenp div{
+  position: absolute;
+  top: 0px;
+  display: none;
+}
+
+.Ledenp:hover div{
+  display: block;
+}
 .L1 {
   grid-area: Ledenp1;
 
@@ -186,7 +197,8 @@
 }
 
 #LedenPage img {
-  width: 20vw;
+  
+  max-width: 100%;
   height: 30vh;
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
