--- a/test.css
+++ b/test.css
@@ -6,7 +6,7 @@
 }
 .Form {
     display: flex;
-  
+  align-items: center;
   justify-self: center;
   background-color: gold;
   width: 30vw;
@@ -29,7 +29,7 @@
   }
   
   .form-group {
-    margin-bottom: 20px;
+    margin-bottom: 35px;
   }
   
   label {
