--- a/Style2.css
+++ b/Style2.css
@@ -136,8 +136,6 @@
 }
 
 .Ledenp {
-  /* display: flex; */
-
   margin: 15px 0px;
   text-align: center;
   background-size: cover;
@@ -146,15 +144,20 @@
   position: relative;
 }
 
-.Ledenp div{
+.Ledenp div {
   position: absolute;
-  top: 0px;
+  top: 125px;
+  color: white;
   display: none;
+  width: 210px;
+  border: 5px black;
+  left: 1px;
 }
 
-.Ledenp:hover div{
-  display: block;
+.Ledenp:hover div {
+  display: flex;
 }
+
 .L1 {
   grid-area: Ledenp1;
 
@@ -197,8 +200,7 @@
 }
 
 #LedenPage img {
-  
-  max-width: 100%;
+
   height: 30vh;
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
@@ -304,7 +306,7 @@
 }
 
 
-input,
+.doneerF input,
 select {
   box-shadow: 0px 1px 4px -7px #ffffff, 10px 0px 13px -7px #ffffff, -4px 3px 7px 4px rgb(255 179 179 / 44%);
   display: flex;
@@ -326,4 +328,63 @@ input[type="submit"] {
   display: flex;
   justify-content: center;
   font-weight: normal;
+}
+
+/* Contact */
+#ContactPage {
+  display: grid;
+  grid-template-areas:
+    'FormL FormR';
+}
+
+.Form {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  width: 30vw;
+  height: 68vh;
+  margin: 10px 0px;
+  border: solid 3px black;
+}
+
+.FR {
+  grid-area: FormR;
+  margin-right: 250px;
+}
+
+.FL {
+  grid-area: FormL;
+  margin-left: 250px;
+}
+
+form {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.form-group {
+  margin-bottom: 35px;
+}
+
+label {
+  font-weight: bold;
+}
+
+input,
+textarea {
+  width: 95%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+input[type="submit"] {
+
+  color: #fff;
+  cursor: pointer;
+}
+
+#vraag {
+  height: 55vh;
+  width: 28vw;
 }
