Ola como tale tale vu

--- a/Style2.css
+++ b/Style2.css
@@ -5,17 +5,28 @@
   grid-column-gap: 35px;
   margin: 15px 100px;
 }
+#indexPage img{
+  top: 0%;
+  height: 25vh;
+}
+#indexPage a{
+  color: #000000;
+}
 
 .Nieuws {
+  display: flex;
+  background-color: #c8c8c8;
   --border-width: 4px;
   height: 65vh;
   border-radius: var(--border-width);
-
   position: relative;
   -webkit-box-shadow: 0px 0px 6px 7px rgba(0, 0, 0, 0.45);
   -moz-box-shadow: 0px 0px 6px 7px rgba(0, 0, 0, 0.45);
   box-shadow: 0px 0px 6px 7px rgba(0, 0, 0, 0.45);
-
+  width: 19vw;
+  flex-direction: column;
+    justify-content: center;
+    
 }
 
 .N1 {
@@ -86,9 +97,18 @@
 }
 
 .nieuwsp {
+  display: flex;
   margin: 1vh 0px;
-  background-color: aquamarine;
-  height: 20vh;
+  border: solid 3px black;
+  height: 35vh;
+  align-items: center;
+}
+.nieuwsp img{
+  height: 35vh;
+}
+.nieuwsp a{
+  color: #000;
+  
 }
 
 .np1 {
@@ -145,12 +165,13 @@
 }
 
 .Ledenp div {
+  background-size: cover;
   position: absolute;
   top: 125px;
   color: white;
   display: none;
   width: 210px;
-  border: 5px black;
+  text-shadow: 2px 2px #000;
   left: 1px;
 }
 
