--- a/Style.css
+++ b/Style.css
@@ -1,36 +1,40 @@
-*{
-  font-family:fantasy;
+* {
+  font-family: fantasy;
 }
+
 /* Body */
 body {
   margin: 0px 0px 0px 0px;
   border-top: 4px solid #EC1B23;
   background-color: #e8e8e8;
   display: grid;
-  grid-template-areas: 
-  'PTitle'
-  'Header'
-  'Onderwerp'
-  'Footer'
+  grid-template-areas:
+    'PTitle'
+    'Header'
+    'Onderwerp'
+    'Footer'
   ;
 
   /* grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 2fr 5fr 1fr; */
 }
-h1{
-  
+
+h1 {
+
   height: 0vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 /* Header styles */
-Header{
+Header {
   margin: -30px 15px 0px 15px;
   display: grid;
   grid-area: Header;
   grid-template-areas: 'Logo Menu wave';
 }
+
 #Logo {
   grid-area: Logo;
   border-radius: 0%;
@@ -40,15 +44,18 @@ Header{
   background-image: url("Images/SP.png");
   background-size: cover;
 }
+
 a {
   text-decoration: none;
 }
-.Menu{
+
+.Menu {
   display: flex;
   grid-area: Menu;
   align-items: center;
   justify-content: center;
 }
+
 .btn {
   border: none;
   background-color: #e8e8e8;
@@ -57,7 +64,7 @@ a {
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
- 
+
   transition: 0.5s;
 }
 
@@ -120,11 +127,11 @@ a {
   letter-spacing: 7px;
   text-transform: uppercase;
   animation: zoomup 3s linear infinite;
-  
+
 }
 
 .Doneer .wave {
- 
+
   width: 25vw;
   height: 200px;
   background-color: #d8d8d8;
@@ -169,7 +176,9 @@ a {
     transform: translate(-50%, -75%) rotate(360deg);
   }
 }
+
 @keyframes zoomup {
+
   0%,
   100% {
     color: #000000;
@@ -178,6 +187,7 @@ a {
       0 0 40px #d70000, 0 0 60px #d70000, 0 0 80px #d70000, 0 0 100px #d70000,
       0 0 120px #d70000;
   }
+
   5%,
   95% {
     filter: blur(0);
@@ -187,15 +197,17 @@ a {
 }
 
 
-.Onderwerp{
+.Onderwerp {
   grid-area: Onderwerp;
-  
+
 }
 
-
-
-
-
+#indexPage>a:hover img {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 1s ease;
+}
 
 /* Footer */
 footer {
@@ -204,8 +216,8 @@ footer {
   height: 8vh;
   background-color: rgb(245, 13, 13);
   border-radius: 22px;
-  
-  
+
+
   color: rgb(0, 0, 0);
   margin: 0px 0px 0px -8px;
   text-align: center;
