--- a/Style2.css
+++ b/Style2.css
@@ -104,7 +104,7 @@
   height: 45vh;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 15px 0px #5a1313;
+  box-shadow: 0px 0px 15px 0px #be0000;
   font-size: 35px;
   color: #ff0000;
   text-shadow: 1px 0px 9px #000000ba;
