--- a/Style.css
+++ b/Style.css
@@ -33,6 +33,8 @@ Header {
   display: grid;
   grid-area: Header;
   grid-template-areas: 'Logo Menu wave';
+  box-shadow: 0px 9px 4px 0px #00000061;
+  border-radius: 40px 40px;
 }
 
 #Logo {
