--- a/Style2.css
+++ b/Style2.css
@@ -3,10 +3,10 @@
   display: grid;
   grid-template-areas: 'Nieuws1 Nieuws2 Nieuws3 Nieuws4';
   grid-column-gap: 5px;
-    margin: 25px 15px 28px 0px;
-    justify-content: space-evenly;
-    text-align: center;
-    text-shadow: 0px 0px 4px #ff0000;
+  margin: 25px 15px 28px 0px;
+  justify-content: space-evenly;
+  text-align: center;
+  text-shadow: 0px 0px 4px #ff0000;
 }
 
 #indexPage img {
@@ -21,9 +21,11 @@
   color: #7c0000;
   font-size: 30px;
 }
-#indexPage div{
+
+#indexPage div {
   margin: 0px 0px;
 }
+
 .Nieuws {
   display: flex;
   background-color: #ffffff;
@@ -76,6 +78,7 @@
   background-position: 0 50%;
   border-radius: calc(2 * var(--border-width));
   animation: moveGradient 4s alternate infinite;
+  filter: blur(10px);
 }
 
 
@@ -107,18 +110,23 @@
   height: 45vh;
   align-items: center;
   justify-content: center;
-  background-color:#ffffff ;
+  background-color: #ffffff;
   box-shadow: inset 0px 0px 20px 5px #5f0000;
   font-size: 35px;
   color: #ff0000;
   letter-spacing: 3px;
-word-spacing: 3px;
-  text-shadow: 1px 0px 0px #000000;
+  word-spacing: 3px;
+  text-shadow: -1px 1px 12px #ffffff;
+  border-radius: 100px 100px 0px 0px;
+
+  background: linear-gradient(0deg, rgb(255 255 255) 0%, rgb(255 79 79));
 }
 
 .nieuwsp img {
   margin: 0px 45px 0px 45px;
   height: 35vh;
+  border-radius: 10px 10px ;
+  box-shadow: -2px 0px 20px 1px #000;
 }
 
 
@@ -178,12 +186,15 @@ word-spacing: 3px;
 .Ledenp div {
   background-size: cover;
   position: absolute;
-  top: 125px;
+  top: 215px;
   color: white;
+  margin: -10px 0px 0px 37px;
   display: none;
   width: 210px;
-  text-shadow: 2px 2px #000;
+  text-align: center;
+  text-shadow: 2px 2px 4px #000;
   left: 1px;
+  
 }
 
 .Ledenp:hover div {
@@ -233,10 +244,12 @@ word-spacing: 3px;
 
 #LedenPage img {
 
-  height: 30vh;
+  height: 40vh;
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
   -webkit-transition: all 1s ease;
+  border-radius: 100px 0px;
+  box-shadow: 0px 0px 13px 0px black;
 }
 
 #LedenPage img:hover {
@@ -428,17 +441,19 @@ input[type="submit"] {
     'Title Title'
     'NieuwsT Foto';
   margin: 20px 130px;
-  border: solid 1px red;
+  border: solid 1px rgb(0, 0, 0);
   box-shadow: -7px -1px 20px 4px black;
-  background-color: #e9dbdb;
+  background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(109 58 58) 100%);
 }
 
 .title {
+  text-shadow: 0px 0px 8px #000;
   grid-area: Title;
   color: #ff0000;
   font-size: 3vw;
   height: 15vh;
   width: 80vw;
+  margin: 0px 0px 0px 15px;
 }
 
 .foto {
@@ -459,6 +474,6 @@ input[type="submit"] {
   margin: 0px -20px 0px 25px;
   font-size: 1.2vw;
   width: 35vw;
-  text-shadow: 0px 0px red;
+  text-shadow: 0px 0px 10px rgb(255, 255, 255);
   text-align: center;
 }
