--- a/Media.css
+++ b/Media.css
@@ -1,3 +1,8 @@
+@media only screen and (max-width: 1024px) {
+    body {
+      background-color: rgb(255, 238, 0);
+    }
+  }
 @media only screen and (max-width: 600px) {
     body {
       background-color: rgb(0, 191, 255);
