--- a/Media.css
+++ b/Media.css
@@ -1,8 +1,10 @@
+/* Ipad */
 @media only screen and (max-width: 1024px) {
     body {
       background-color: rgb(255, 238, 0);
     }
   }
+/* Phone */
 @media only screen and (max-width: 600px) {
     body {
       background-color: rgb(0, 191, 255);
