--- a/Media.css
+++ b/Media.css
@@ -1,10 +1,116 @@
+
+/* Ipad */
+@media only screen and (max-width: 1024px) {
+  body {
+    /* background-color: rgb(255, 238, 0); */
+  }
+
+  .btn {
+    padding: 14px 26px;
+  }
+
+  /* Index */
+  #indexPage a {
+    font-size: 20px;
+  }
+
+  /* haeder */
+  #Logo {
+    width: 25vw;
+    height: 18vh;
+  }
+
+  .Doneer {
+    width: 12vw;
+  }
+
+  /* Nieuws */
+  .nieuwsp {
+    font-size: 20px;
+    margin: 1vh 0px;
+  }
+
+  .nieuwsp img {
+    height: 24vh;
+  }
+
+  /* Leden */
+  #LedenPage img {
+    height: 24vh;
+  }
+
+  .Ledenp div {
+    font-size: 1.2vw;
+    top: 101px;
+    width: 131px;
+    left: -35px;
+  }
+
+  /* Contact */
+  .Form {
+    border: none;
+  }
+
+  .FL {
+    margin-left: 160px;
+  }
+
+  .FR {
+    margin-right: 160px;
+  }
+
+  input,
+  textarea {
+    width: 85%;
+  }
+
+  #vraag {
+    width: 27vw;
+  }
+
+  /* Doneer */
+  #DoneerPage {
+    margin: 0px 37px;
+  }
+
+  .doneerF {
+    width: 33vw;
+    height: 73vh;
+  }
+
+  form {
+    margin: 0px -25px;
+  }
+
+  .Li0 {
+    margin: 0px 0px 300px -40px;
+  }
+
+  .donerenLijst {
+    font-size: 2vw;
+  }
+
+  /* Nieuw pagina (Npagina) */
+  #Npagina img {
+    max-height: 53%;
+  }
+
+  #Npagina {
+    margin: 20px 65px;
+  }
+
+  .tekst {
+    font-size: 1.5vw;
+  }
+}
 /* Phone */
 @media only screen and (max-width: 600px) {
   body {
-    background-color: rgb(0, 191, 255);
+    
 
   }
 
+  /* index */
   #indexPage {
     display: grid;
     grid-template-areas: 'Nieuws1'
@@ -27,7 +133,6 @@
     width: auto;
   }
 
-
   .Nieuws {
     width: 50vw;
     height: 53vh;
@@ -35,15 +140,15 @@
     align-items: center;
   }
 
-
+  /* header */
   .btn {
     font-size: 10px;
     padding: 14px 20px;
   }
 
   #Logo {
-    height: 4vh;
-    width: 10vw;
+    height: 5vh;
+    width: 11vw;
   }
 
   .Doneer {
@@ -61,8 +166,7 @@
     background-color: rgba(255, 0, 0, 0);
   }
 
-
-
+  /* nieuws pagina */
   .nieuwsp {
     font-size: 19px;
     height: 35vh;
@@ -105,6 +209,7 @@
     width: 60vw;
   }
 
+  /* Leden pagina */
   #LedenPage {
     grid-template-areas:
       'Ledenp1 Ledenp2'
@@ -119,6 +224,7 @@
     margin: -8px 0px 0px 0px;
     width: 183px;
     top: 120px;
+    left: 0px;
     font-size: 12px;
   }
 
@@ -131,6 +237,7 @@
     height: 55%;
   }
 
+  /* stand punten */
   #StandPuntenPage {
     margin: 0px 65px;
   }
@@ -144,6 +251,7 @@
     width: 142px;
   }
 
+  /* contact */
   .FL {
     margin-left: 0px;
     width: 90vw;
@@ -155,6 +263,9 @@
     width: 90vw;
     height: 51vh;
   }
+  form {
+    margin: 0px 25px;
+}
 
   #ContactPage {
     display: grid;
@@ -177,6 +288,7 @@
     border-radius: 5px;
   }
 
+  /* doneren */
   #DoneerPage {
     display: grid;
     grid-template-areas: 'DR'
@@ -212,6 +324,7 @@
     width: 47vw;
   }
 
+  /* footer */
   footer {
     margin: 0px 0px 0px 0px;
   }
@@ -221,3 +334,4 @@
     font-size: 3vw;
   }
 }
+
